05-ingress/01_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: lesson4
  name: ingress-lesson4
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ingress.almuhametov.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  name: web
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  name: web
#  tls:
#    - hosts:
#        - ingress.almuhametov.com
#      secretName: akop
