05-ingress/02_ingress_lb.yaml
---
## Web application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: nginx:1.19.2
          name: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: web

## multitool application
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-multitool
spec:
  replicas: 2
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      nodeSelector:
        gpu: "true"
      containers:
      - name: network-multitool
        image: praqma/network-multitool:alpine-extra
        ports:
          - containerPort: 31080
            name: somename

---
apiVersion: v1
kind: Service
metadata:
  name: multitool-svc
spec:
  ports:
    - name: app
      port: 80
      targetPort: 31080
  selector:
    app: multitool
#  type: ClusterIP


# ============== Ingress ============ #
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.dens-al.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  name: web
          - path: /app
            pathType: Exact
            backend:
              service:
                name: multitool-svc
                port:
                  name: app


#  tls:
#    - hosts:
#        - ingress.almuhametov.ru
#      secretName: tls-secret
---
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  # loadBalancerIP is optional. MetalLB will automatically allocate an IP
  # from its pool if not specified. You can also specify one manually.
  # loadBalancerIP: x.y.z.a
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
