05-ingress/02_ingress_ssl.yaml
---
## Web application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: nginx:1.19.2
          name: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: web

## multitool application
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-multitool
spec:
  replicas: 2
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
        - name: network-multitool
          image: praqma/network-multitool:alpine-extra
          ports:
            - containerPort: 31080
              name: somename

---
apiVersion: v1
kind: Service
metadata:
  name: multitool-svc
spec:
  ports:
    - name: app
      port: 31080
  #      targetPort: 31080
  selector:
    app: multitool
#  type: ClusterIP


# ============== Ingress ============ #
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
#    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
    - host: web.dens-al.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  name: web
    - host: app.dens-al.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: multitool-svc
                port:
                  name: app
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
    - hosts:
        - web.dens-al.ru
        - app.dens-al.ru
      secretName: my-ingress-cert # < cert-manager will store the created certificate in this secret.
