05-ingress/02_ingress_yc.yaml
---
### First app ###
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-multitool-yc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: multitool-yc
  template:
    metadata:
      labels:
        app: multitool-yc
    spec:
      containers:
        - name: multitool-pragma
          image: praqma/network-multitool:alpine-extra
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: svc-multitool-yc
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      nodePort: 30081
  selector:
    app: multitool-yc
  type: NodePort
---
## Second app ###
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-multitool2-yc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: multitool2-yc
  template:
    metadata:
      labels:
        app: multitool2-yc
    spec:
      containers:
        - name: multitool-wbitt
          image: wbitt/network-multitool
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: svc-multitool2-yc
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      nodePort: 30082
  selector:
    app: multitool2-yc
  type: NodePort

---
## ========= Yandex ALN ingress controller's ingress ========== #
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-yc
  annotations:
    ## NEED to be created at least 1 subnet in EVERY zone!
    ingress.alb.yc.io/subnets: "e9b4a68d3i8v1gbqe0df"
    ingress.alb.yc.io/group-name: my-ingress-group
    ingress.alb.yc.io/security-groups: "enpkpeflnc1gpfso8o9f"
    ingress.alb.yc.io/external-ipv4-address: auto
spec:
  #  tls:
  #    - hosts:
  #        - dens-al.ru
  #      secretName: yc-certmgr-cert-id-fpq4jmuu373m5pkto5ue
  ingressClassName: "alb"
  rules:
    - host: yc.dens-al.ru
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: svc-multitool-yc
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: svc-multitool2-yc
                port:
                  name: web
